# FallingFilmLoopingPhotoreactor

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  license.md  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy-sphinx.yml
01_Experiments/00_RTD/00_External_Flow_Rate_Variation/: 03.3 mL per min.csv  05 mL per min.csv  10 mL per min.csv  20 mL per min.csv  40 mL per min.csv
01_Experiments/00_RTD/01_Space_Velocity_Variation/: 0spv.csv  30spv.csv  (+1 more)
02_Software/: 02_RTD_Cell_Control.py
02_Software/00_RTD_Model/: README.md  main.ipynb  main.py
02_Software/01_Arduino_Control/: readme.md
03_Documentation/: RTD_cell_Dani_merge.rst
03_Documentation/source/: conf.py  index.rst
_modules/: index.html
_modules/02_Software/: 02_RTD_Cell_Control.html
_sources/: index.rst.txt
_sources/hardware/: RTD_cell.rst.txt  abstr.rst.txt  cstr_overview.rst.txt
_sources/software/: hx711_load_cell.rst.txt  readme.rst.txt  rtd_cell_control.rst.txt  rtd_model_overview.rst.txt  rtd_model_software.rst.txt
_static/cad/: RTD_cell_bottom_1mm_tubing.ipt  RTD_cell_bottom_2mm_tubing.ipt  RTD_cell_bottom_2mm_tubing.stl  RTD_cell_bottom_3mm_tubing.ipt  RTD_cell_bottom_3mm_tubing.stl  RTD_cell_top_2mm_tubing.ipt  RTD_cell_top_2mm_tubing.stl  RTD_cell_top_3mm_tubing.stl
hardware/: RTD_cell.html  abstr.html  cstr_overview.html  index.html
hardware/materials/: index.html
software/: hx711_load_cell.html  index.html  readme.html  rtd_cell_control.html  rtd_model_overview.html  rtd_model_software.html
(+215 files in other folders)
